--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 <body>
   <div class="calc">
     <span class="process"></span>
+    <div class="window">
+      <span class="input"></span>
+    </div>
     <div class="interface">
       <div class="numbers">
-        <div class="window">
-          <span class="input"></span>
-        </div>
+        <div class="square">x<sup>2</sup></div>
+        <div class="clear">C</div>
+        <div class="delete"><img src="delete.png" alt="delete"></div>
         <div data-number="7" class="number">7</div>
         <div data-number="8" class="number">8</div>
         <div data-number="9" class="number">9</div>
@@ -40,7 +43,6 @@
     </div>
     <!-- /.interface -->
   </div>
-  <div class="clear">C</div>
   <!-- /.calc -->
   <script src="main.js"></script>
 </body>
